--- a/playground/src/style.css
+++ b/playground/src/style.css
@@ -24,3 +24,32 @@ h1 {
   color: #FFFFFF;
 }
 
+.wrapper_gallery_container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  margin-left: 0px;
+  margin-right: 0px;
+}
+
+.wrapper_gallery_container .wrapper_tier {
+
+}
+
+.wrapper_gallery_container .wrapper_tier .wrapper_image {
+  border-radius: 8px;
+  overflow: hidden;
+}
+
+.wrapper_gallery_container .wrapper_tier .wrapper_image .image {
+  width: auto;
+  height: var(--height);
+  object-fit: cover;
+  object-position: center;
+}
+
